<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/txt_registro_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_registro_Nombre"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/txt_registro_Edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtv2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_registro_Nombre"
        android:layout_below="@+id/txt_registro_Nombre"
        android:layout_marginTop="52dp"
        android:text="@string/edad" />

    <Button
        android:id="@+id/btn_registro_Aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_registro_Edad"
        android:layout_alignRight="@+id/txt_registro_Edad"
        android:layout_below="@+id/txt_registro_Edad"
        android:layout_marginTop="36dp"
        android:text="@string/boton_Aceptar" />

</RelativeLayout>